2001-06-17  Dave Peticolas  <dave@krondo.com>

	* src/FileDialog.c (gncFileSave): save the window state on a save
	(gncFileQuerySave): don't provide cancel option when the ui can't

	* src/scm/main-window.scm (gnc:main-window-save-state): new func
	don't save state when the ui can't

	* src/gnome/window-main.c
	(gnc_main_window_can_cancel_exit): new func
	(gnc_main_window_can_save): new func
	(gnc_main_window_has_apps): new func

	* src/gnc-ui.h: add new api

	* src/gnome/top-level.c (gnc_ui_can_cancel_exit): new func

2001-06-16  Dave Peticolas  <dave@krondo.com>

	* src/scm/prefs.scm: fix bug

	* src/scm/main.scm: fix bug

2001-06-15  Robert Graham Merkel  <rgmerk@mira.net>

	* src/engine/Transaction.c (xaccSplitDateOrder): Fix bug -
	use split values rather than balances.

2001-06-10  Christian Stimming  <stimming@tuhh.de>

	* de.po: updated German translation.
	
	* configure.in, doc/sgml/Makefile.am, doc/sgml/de_DE/*: Added
	German translation of a few manual pages, including a Whats-New
	table for the translated words.

2001-06-10  Dave Peticolas  <dave@krondo.com>

	* doc/sgml/C/xacc-print.sgml: fix docs

	* src/engine/gnc-engine-util.c: change debug levels to warning

2001-06-10  Bill Gribble  <grib@billgribble.com>

	* src/scm/report/welcome-to-gnucash.scm: fix bug in "welcome to
	gnucash" report

	* src/gnome/dialog-column-view.c: remove printout 
	
2001-06-09  Dave Peticolas  <dave@krondo.com>

	* configure.in: fix bug

	* doc/sgml/C/xacc-about.sgml: update credits

	* src/gnome/window-main.c (gnc_main_window_about_cb): update
	credits

	* AUTHORS: update credits

	* src/gnome/reconcile-list.c (gnc_reconcile_list_refresh): fix
	bugs

	* src/gnome/dialog-utils.c (gnc_clist_add_check): fix bugs

	* doc/sgml/pt_PT/Makefile.am: remove adjust balance docs

	* doc/sgml/C/Makefile.am: remove adjust balance docs

	* doc/sgml/de_DE/xacc-quickstart.sgml: fix docs

	* doc/sgml/pt_PT/xacc-quickstart.sgml: fix docs

	* doc/sgml/C/xacc-quickstart.sgml: fix docs
